--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,8 +14,7 @@
         "resolveJsonModule": true,
         "moduleResolution": "node",
         "types": [
-            "node",
-            "jest"
+            "node"
         ]
     },
     "include": [
