--- a/server/package.json
+++ b/server/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "classuploads-server",
-  "version": "1.0.0",
-  "description": "ClassUploads backend server",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "seed": "tsx src/db/seed.ts",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@huggingface/inference": "^4.13.3",
-    "@types/pg": "^8.15.6",
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "pg": "^8.16.3",
-    "sqlite3": "^5.1.6"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
-    "@types/supertest": "^6.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
-  }
+    "name": "studydrop-server",
+    "version": "1.0.0",
+    "description": "StudyDrop backend server",
+    "main": "dist/index.js",
+    "scripts": {
+        "dev": "tsx watch src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "seed": "tsx src/db/seed.ts",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@huggingface/inference": "^4.13.3",
+        "@types/pg": "^8.15.6",
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "pg": "^8.16.3",
+        "sqlite3": "^5.1.6"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^4.17.25",
+        "@types/jest": "^29.5.11",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^1.4.13",
+        "@types/node": "^20.10.5",
+        "@types/supertest": "^6.0.2",
+        "jest": "^29.7.0",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
+        "tsx": "^4.7.0",
+        "typescript": "^5.3.3"
+    }
 }
