--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,7 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "moduleResolution": "node",
+        "noImplicitAny": false,
         "types": [
             "node"
         ]
