--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "classuploads-client",
+    "name": "studydrop-client",
     "version": "1.0.0",
     "type": "module",
+    "description": "StudyDrop frontend - Share and discover class materials",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
