--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@huggingface/inference": "^4.13.3",
+        "@supabase/supabase-js": "^2.84.0",
         "@types/pg": "^8.15.6",
         "axios": "^1.13.2",
         "bcrypt": "^5.1.1",
