--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "@huggingface/inference": "^4.13.3",
         "@supabase/supabase-js": "^2.84.0",
         "@types/pg": "^8.15.6",
@@ -25,6 +26,7 @@
         "express-rate-limit": "^7.1.5",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "pdf-parse": "^2.4.5",
         "pg": "^8.16.3",
         "sqlite3": "^5.1.6"
     },
