--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     },
     "dependencies": {
         "axios": "^1.6.2",
+        "katex": "^0.16.25",
         "lucide-react": "^0.294.0",
         "pdfjs-dist": "^5.4.394",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^10.1.0",
         "react-pdf": "^10.2.0",
         "react-router-dom": "^6.20.1",
+        "rehype-katex": "^7.0.1",
+        "remark-math": "^6.0.0",
         "zustand": "^4.4.7"
     },
     "devDependencies": {
